# gst-study

./: README.md
basic-tutorial/: basic-tutorial-1.c  basic-tutorial-2.c  basic-tutorial-3-exercise.c  basic-tutorial-3-video  basic-tutorial-3-video.c  basic-tutorial-3.c  basic-tutorial-4  basic-tutorial-4.c  basic-tutorial-5  basic-tutorial-5.c  basic-tutorial-6  basic-tutorial-6.c  basic-tutorial-7  basic-tutorial-8  basic-tutorial-8.c  basic-tutorial-8.dot  basic-tutorial-9.c  test  test.c
deepstream-study/: deepstream_test1_app.c
doc/Plugin Writer`s Guide/: 01_Introduction.md  02_Foundations.md  03_PluginWriter`sGuide.md  04_AdvancedConcepts.md  05_CreatingSpecialElementTypes.md
doc/gst_expand/: 01_GMain_Loop.md
glib-study/: 1.Gvalue.c  10.gmain-loop.c  11.gsource-socket.c  11.gsource.c  12.ansi.txt  12.io-channel.c  12.test.txt  12.write.txt  13.gmain-stdin.c  14.GOptionEntry  14.GOptionEntry.c  15.GKeyFile.c  15.config.txt  16.strtoull.c  17.GSettings  17.GSettings.c  18.GMainContext  18.GMainContext.c  19.GTask  19.GTask.c  2.Gquark.c  20.gdbus_client  20.gdbus_client.c  20.gdbus_server  20.gdbus_server.c  21.g_atomic  21.g_atomic.c  3.warnings-assertions.c  4.singly-lists.c  5.double-list.c  6.double-ended-queue.c  7.thread.c  8.thread-lock.c  9.thread-cond.c
gst-development/: 0.00.00.106038328-pipeline.dot  0.00.00.110732575-pipeline.dot  0.00.00.122742755-pipeline.dot  1.simple-Init.c  10.gtk4paintablesink  10.gtk4paintablesink copy.c  10.gtk4paintablesink.c  11.x11_surface  11.x11_surface.c  12.x11  12.x11.c  2.goption-init.c  3.find-info.c  4.buffer-probe.c  5.play-file-regio.c  6.dynamic-change-element.c  7.idelprobe.c  8.multifilesink  9.splitmuxsink  9.splitmuxsink.c
gst-dynamic-manipulation/: 0.00.16.062056906-pipeline.dot  0.00.16.113032072-pipeline.dot  0.00.23.751811812-pipeline.dot  0.00.29.250235938-pipeline.dot  0.01.58.968498152-pipeline.dot  01_changing_element  01_changing_element.c  02_dynamic_filter.c  03_dynamic_filter_idle.c  04_dynamic-tee-vsink.c  05_dynamic-tee-fsink.c  06_play_and_record_video  06_play_and_record_video.c  07_dynamic_tee_bin  07_dynamic_tee_bin.c  6.dynamic-change-element.dot  DotToPng.sh  README.txt  deepstream_common.h  pipeline_del_buffer.py  pipeline_look.py  pipeline_trace_look.py  test.c
gst-expand/: 1.watch-bus.c  2.media-player  2.media-player.c  3.player.c  4.bus-message.c  5.gst-structure.c  6.seek-step  6.seek-step.c
tcp-study/: client  client.c  server  server.c
ximage/: config.h  meson.build  meson_options.txt  ximage.c  ximagepool.c  ximagepool.h  ximagesink.c  ximagesink.h  ximagesink.md
(+46 files in other folders)
